@@ -1,3 +1,4 @@
+* Fixed saving of objects when tile width is different from tile height
 * Updated Czech translation
 
 0.5.0 (30 June 2010)
